--- a/Source/nachos-3.4/code/filesys/Makefile
+++ b/Source/nachos-3.4/code/filesys/Makefile
@@ -42,8 +42,10 @@ main.o: ../threads/main.cc ../threads/copyright.h ../threads/utility.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
+ ../machine/disk.h ../threads/synch.h
 list.o: ../threads/list.cc ../threads/copyright.h ../threads/list.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
  ../threads/copyright.h /usr/include/stdio.h /usr/include/features.h \
@@ -71,8 +73,10 @@ scheduler.o: ../threads/scheduler.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/system.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
- ../machine/disk.h ../threads/synch.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 synch.o: ../threads/synch.cc ../threads/copyright.h ../threads/synch.h \
  ../threads/thread.h ../threads/utility.h ../threads/bool.h \
  ../machine/sysdep.h ../threads/copyright.h /usr/include/stdio.h \
@@ -90,6 +94,8 @@ synch.o: ../threads/synch.cc ../threads/copyright.h ../threads/synch.h \
  ../threads/list.h ../threads/system.h ../threads/scheduler.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 synchlist.o: ../threads/synchlist.cc ../threads/copyright.h \
  ../threads/synchlist.h ../threads/list.h ../threads/utility.h \
@@ -122,9 +128,9 @@ system.o: ../threads/system.cc ../threads/copyright.h ../threads/system.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
- ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
- ../threads/stable.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/sem.h ../threads/synch.h ../threads/ptable.h ../threads/pcb.h
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 thread.o: ../threads/thread.cc ../threads/copyright.h ../threads/thread.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
  ../threads/copyright.h /usr/include/stdio.h /usr/include/features.h \
@@ -141,7 +147,9 @@ thread.o: ../threads/thread.cc ../threads/copyright.h ../threads/thread.h \
  ../threads/switch.h ../threads/synch.h ../threads/list.h \
  ../threads/system.h ../threads/scheduler.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 utility.o: ../threads/utility.cc ../threads/copyright.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
@@ -171,6 +179,8 @@ threadtest.o: ../threads/threadtest.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 interrupt.o: ../machine/interrupt.cc ../threads/copyright.h \
  ../machine/interrupt.h ../threads/list.h ../threads/copyright.h \
@@ -189,6 +199,8 @@ interrupt.o: ../machine/interrupt.cc ../threads/copyright.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 sysdep.o: ../machine/sysdep.cc ../threads/copyright.h \
  /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h \
@@ -233,8 +245,10 @@ sysdep.o: ../machine/sysdep.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
- ../machine/disk.h ../threads/synch.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 stats.o: ../machine/stats.cc ../threads/copyright.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
  /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h \
@@ -262,8 +276,10 @@ timer.o: ../machine/timer.cc ../threads/copyright.h ../machine/timer.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
+ ../machine/disk.h ../threads/synch.h
 addrspace.o: ../userprog/addrspace.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -281,6 +297,8 @@ addrspace.o: ../userprog/addrspace.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../userprog/addrspace.h ../bin/noff.h ../userprog/PageTableManage.h
 bitmap.o: ../userprog/bitmap.cc ../threads/copyright.h \
@@ -312,10 +330,10 @@ exception.o: ../userprog/exception.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
- ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
- ../threads/system.h ../userprog/syscall.h
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
+ ../userprog/syscall.h
 progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -333,6 +351,8 @@ progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
  ../userprog/addrspace.h
 console.o: ../machine/console.cc ../threads/copyright.h \
@@ -352,8 +372,10 @@ console.o: ../machine/console.cc ../threads/copyright.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
+ ../machine/disk.h ../threads/synch.h
 machine.o: ../machine/machine.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -371,8 +393,10 @@ machine.o: ../machine/machine.cc ../threads/copyright.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
+ ../machine/disk.h ../threads/synch.h
 mipssim.o: ../machine/mipssim.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -390,8 +414,10 @@ mipssim.o: ../machine/mipssim.cc ../threads/copyright.h \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
- ../machine/disk.h ../threads/synch.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 translate.o: ../machine/translate.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -409,8 +435,10 @@ translate.o: ../machine/translate.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
+ ../machine/disk.h ../threads/synch.h
 synchcons.o: ../threads/synchcons.cc ../threads/synchcons.h \
  ../machine/console.h ../threads/copyright.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
@@ -456,7 +484,9 @@ PageTableManage.o: ../userprog/PageTableManage.cc \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
  ../machine/disk.h ../threads/synch.h
 ptable.o: ../threads/ptable.cc ../threads/ptable.h ../threads/copyright.h \
  ../userprog/bitmap.h ../threads/copyright.h ../threads/utility.h \
@@ -476,8 +506,8 @@ ptable.o: ../threads/ptable.cc ../threads/ptable.h ../threads/copyright.h \
  ../threads/FileManage.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 stable.o: ../threads/stable.cc ../threads/stable.h ../threads/copyright.h \
  ../userprog/bitmap.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -496,8 +526,8 @@ stable.o: ../threads/stable.cc ../threads/stable.h ../threads/copyright.h \
  ../threads/FileManage.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../threads/pcb.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 sem.o: ../threads/sem.cc ../threads/sem.h ../threads/copyright.h \
  ../threads/synch.h ../threads/thread.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h ../threads/copyright.h \
@@ -530,8 +560,9 @@ pcb.o: ../threads/pcb.cc ../threads/pcb.h /usr/include/string.h \
  ../threads/FileManage.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h ../filesys/synchdisk.h ../machine/disk.h \
- ../threads/synch.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 directory.o: ../filesys/directory.cc ../threads/copyright.h \
  ../threads/utility.h ../threads/copyright.h ../threads/bool.h \
  ../machine/sysdep.h /usr/include/stdio.h /usr/include/features.h \
@@ -562,8 +593,10 @@ filehdr.o: ../filesys/filehdr.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
- ../filesys/filehdr.h ../userprog/bitmap.h ../filesys/openfile.h
+ ../filesys/filehdr.h
 filesys.o: ../filesys/filesys.cc ../threads/copyright.h ../machine/disk.h \
  ../threads/utility.h ../threads/copyright.h ../threads/bool.h \
  ../machine/sysdep.h /usr/include/stdio.h /usr/include/features.h \
@@ -593,8 +626,11 @@ fstest.o: ../filesys/fstest.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h ../filesys/synchdisk.h \
- ../machine/disk.h ../threads/synch.h ../threads/thread.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h \
+ ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h \
+ ../threads/thread.h
 openfile.o: ../filesys/openfile.cc ../threads/copyright.h \
  ../filesys/filehdr.h ../machine/disk.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
@@ -613,7 +649,9 @@ openfile.o: ../filesys/openfile.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
- ../filesys/synchdisk.h ../threads/synch.h
+ ../threads/ptable.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h ../filesys/synchdisk.h \
+ ../threads/synch.h
 synchdisk.o: ../filesys/synchdisk.cc ../threads/copyright.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
@@ -645,6 +683,8 @@ disk.o: ../machine/disk.cc ../threads/copyright.h ../machine/disk.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../filesys/synchdisk.h ../machine/disk.h ../threads/synch.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
