--- a/Source/nachos-3.4/code/threads/Makefile
+++ b/Source/nachos-3.4/code/threads/Makefile
@@ -35,7 +35,9 @@ main.o: ../threads/main.cc ../threads/copyright.h ../threads/utility.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h
 list.o: ../threads/list.cc ../threads/copyright.h ../threads/list.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
  ../threads/copyright.h /usr/include/stdio.h /usr/include/features.h \
@@ -63,7 +65,9 @@ scheduler.o: ../threads/scheduler.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/system.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h
 synch.o: ../threads/synch.cc ../threads/copyright.h ../threads/synch.h \
  ../threads/thread.h ../threads/utility.h ../threads/bool.h \
  ../machine/sysdep.h ../threads/copyright.h /usr/include/stdio.h \
@@ -80,7 +84,9 @@ synch.o: ../threads/synch.cc ../threads/copyright.h ../threads/synch.h \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/list.h ../threads/system.h ../threads/scheduler.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/synchcons.h ../machine/console.h
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/stable.h ../threads/sem.h
 synchlist.o: ../threads/synchlist.cc ../threads/copyright.h \
  ../threads/synchlist.h ../threads/list.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h ../threads/copyright.h \
@@ -112,8 +118,8 @@ system.o: ../threads/system.cc ../threads/copyright.h ../threads/system.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
- ../threads/stable.h ../userprog/bitmap.h ../filesys/openfile.h \
- ../threads/sem.h ../threads/synch.h ../threads/ptable.h ../threads/pcb.h
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h
 thread.o: ../threads/thread.cc ../threads/copyright.h ../threads/thread.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
  ../threads/copyright.h /usr/include/stdio.h /usr/include/features.h \
@@ -130,7 +136,9 @@ thread.o: ../threads/thread.cc ../threads/copyright.h ../threads/thread.h \
  ../threads/switch.h ../threads/synch.h ../threads/list.h \
  ../threads/system.h ../threads/scheduler.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/stable.h ../threads/sem.h
 utility.o: ../threads/utility.cc ../threads/copyright.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
  ../threads/copyright.h /usr/include/stdio.h /usr/include/features.h \
@@ -158,7 +166,9 @@ threadtest.o: ../threads/threadtest.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
- ../machine/timer.h ../threads/synchcons.h ../machine/console.h
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h
 interrupt.o: ../machine/interrupt.cc ../threads/copyright.h \
  ../machine/interrupt.h ../threads/list.h ../threads/copyright.h \
  ../threads/utility.h ../threads/bool.h ../machine/sysdep.h \
@@ -175,7 +185,9 @@ interrupt.o: ../machine/interrupt.cc ../threads/copyright.h \
  ../machine/disk.h ../userprog/addrspace.h ../filesys/filesys.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../machine/stats.h \
- ../machine/timer.h ../threads/synchcons.h ../machine/console.h
+ ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h
 sysdep.o: ../machine/sysdep.cc ../threads/copyright.h \
  /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h \
  /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h \
@@ -219,7 +231,9 @@ sysdep.o: ../machine/sysdep.cc ../threads/copyright.h \
  ../userprog/addrspace.h ../filesys/filesys.h ../filesys/openfile.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h
 stats.o: ../machine/stats.cc ../threads/copyright.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
  /usr/include/stdio.h /usr/include/features.h /usr/include/sys/cdefs.h \
@@ -247,7 +261,9 @@ timer.o: ../machine/timer.cc ../threads/copyright.h ../machine/timer.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h
 addrspace.o: ../userprog/addrspace.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -265,6 +281,8 @@ addrspace.o: ../userprog/addrspace.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../userprog/addrspace.h ../bin/noff.h ../userprog/PageTableManage.h \
  ../threads/synch.h
 bitmap.o: ../userprog/bitmap.cc ../threads/copyright.h \
@@ -298,7 +316,7 @@ exception.o: ../userprog/exception.cc ../threads/copyright.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
  ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
  ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
- ../threads/system.h ../userprog/syscall.h
+ ../userprog/syscall.h
 progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../threads/system.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -316,6 +334,8 @@ progtest.o: ../userprog/progtest.cc ../threads/copyright.h \
  ../threads/FileManage.h ../threads/scheduler.h ../threads/list.h \
  ../machine/interrupt.h ../threads/list.h ../machine/stats.h \
  ../machine/timer.h ../threads/synchcons.h ../machine/console.h \
+ ../threads/ptable.h ../userprog/bitmap.h ../filesys/openfile.h \
+ ../threads/pcb.h ../threads/synch.h ../threads/stable.h ../threads/sem.h \
  ../userprog/addrspace.h ../threads/synch.h
 console.o: ../machine/console.cc ../threads/copyright.h \
  ../machine/console.h ../threads/utility.h ../threads/copyright.h \
@@ -334,7 +354,9 @@ console.o: ../machine/console.cc ../threads/copyright.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h
 machine.o: ../machine/machine.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -352,7 +374,9 @@ machine.o: ../machine/machine.cc ../threads/copyright.h \
  ../filesys/openfile.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h
 mipssim.o: ../machine/mipssim.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -370,7 +394,9 @@ mipssim.o: ../machine/mipssim.cc ../threads/copyright.h \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../filesys/openfile.h ../threads/pcb.h \
+ ../threads/synch.h ../threads/stable.h ../threads/sem.h
 translate.o: ../machine/translate.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/utility.h ../threads/copyright.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -388,7 +414,9 @@ translate.o: ../machine/translate.cc ../threads/copyright.h \
  ../machine/machine.h ../threads/FileManage.h ../threads/scheduler.h \
  ../threads/list.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h
 synchcons.o: ../threads/synchcons.cc ../threads/synchcons.h \
  ../machine/console.h ../threads/copyright.h ../threads/utility.h \
  ../threads/copyright.h ../threads/bool.h ../machine/sysdep.h \
@@ -434,7 +462,9 @@ PageTableManage.o: ../userprog/PageTableManage.cc \
  ../filesys/filesys.h ../filesys/openfile.h ../threads/FileManage.h \
  ../threads/scheduler.h ../threads/list.h ../machine/interrupt.h \
  ../threads/list.h ../machine/stats.h ../machine/timer.h \
- ../threads/synchcons.h ../machine/console.h
+ ../threads/synchcons.h ../machine/console.h ../threads/ptable.h \
+ ../userprog/bitmap.h ../threads/pcb.h ../threads/synch.h \
+ ../threads/stable.h ../threads/sem.h
 ptable.o: ../threads/ptable.cc ../threads/ptable.h ../threads/copyright.h \
  ../userprog/bitmap.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -453,7 +483,7 @@ ptable.o: ../threads/ptable.cc ../threads/ptable.h ../threads/copyright.h \
  ../threads/FileManage.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/stable.h ../threads/sem.h
 stable.o: ../threads/stable.cc ../threads/stable.h ../threads/copyright.h \
  ../userprog/bitmap.h ../threads/copyright.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h /usr/include/stdio.h \
@@ -472,7 +502,7 @@ stable.o: ../threads/stable.cc ../threads/stable.h ../threads/copyright.h \
  ../threads/FileManage.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../threads/pcb.h
 sem.o: ../threads/sem.cc ../threads/sem.h ../threads/copyright.h \
  ../threads/synch.h ../threads/thread.h ../threads/utility.h \
  ../threads/bool.h ../machine/sysdep.h ../threads/copyright.h \
@@ -505,7 +535,8 @@ pcb.o: ../threads/pcb.cc ../threads/pcb.h /usr/include/string.h \
  ../threads/FileManage.h ../threads/list.h ../threads/system.h \
  ../threads/scheduler.h ../machine/interrupt.h ../threads/list.h \
  ../machine/stats.h ../machine/timer.h ../threads/synchcons.h \
- ../machine/console.h
+ ../machine/console.h ../threads/ptable.h ../userprog/bitmap.h \
+ ../filesys/openfile.h ../threads/stable.h ../threads/sem.h
 # DEPENDENCIES MUST END AT END OF FILE
 # IF YOU PUT STUFF HERE IT WILL GO AWAY
 # see make depend above
